--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/glob": "^7.1.3",
+    "@vuepress/plugin-search": "^2.0.0-beta.19",
     "glob": "^7.1.7",
     "typescript": "^4.3.4",
     "vuepress": "^2.0.0-beta.18",
