--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,19 @@ jobs:
           # fetch all commits to get last updated time or other git log info
           fetch-depth: 0
       
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: generate markdown
+        run:
+          python readexcel.py
+      
       - name: Setup Node.js
         uses: actions/setup-node@v2.1.5
         with:
