--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/glob": "^7.1.3",
     "@vuepress/plugin-search": "^2.0.0-beta.19",
     "glob": "^7.1.7",
+    "parse-md": "^2.0.4",
     "typescript": "^4.3.4",
     "vuepress": "^2.0.0-beta.19",
     "vuepress-vite": "^2.0.0-beta.18"
