--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appdirs==1.4.4
 black==21.6b0
+certifi==2021.5.30
 click==8.0.1
 colorama==0.4.4
 et-xmlfile==1.1.0
@@ -13,6 +14,7 @@ pandas==1.2.4
 pathspec==0.8.1
 python-dateutil==2.8.1
 pytz==2021.1
+PyYAML==5.4.1
 regex==2021.4.4
 six==1.16.0
 toml==0.10.2
