--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,7 +73,7 @@ jobs:
           target_branch: gh-pages
           # deploy the default output dir of VuePress
           build_dir: docs/.vuepress/dist
-          fqdm: "www.zjuconsole.xyz"
+          fqdn: "www.zjuconsole.xyz"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
