--- a/requirements.txt
+++ b/requirements.txt
@@ -12,11 +12,13 @@ numpy==1.20.3
 openpyxl==3.0.7
 pandas==1.2.4
 pathspec==0.8.1
+pathvalidate==2.4.1
 python-dateutil==2.8.1
 pytz==2021.1
 PyYAML==5.4.1
 regex==2021.4.4
 six==1.16.0
 toml==0.10.2
+types-PyYAML==5.4.3
 typing-extensions==3.10.0.0
 xlrd==2.0.1
