--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/glob": "^7.1.3",
-    "@vuepress/plugin-search": "^2.0.0-beta.19",
+    "@vuepress/plugin-search": "^2.0.0-beta.20",
     "glob": "^7.1.7",
     "parse-md": "^2.0.4",
-    "typescript": "^4.3.4",
-    "vuepress": "^2.0.0-beta.19",
-    "vuepress-vite": "^2.0.0-beta.18"
+    "typescript": "^4.3.5",
+    "vuepress": "^2.0.0-beta.20",
+    "vuepress-vite": "^2.0.0-beta.20",
+    "prismjs": ">=1.24.0"
   }
 }
