--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@types/glob": "^7.1.3",
     "@vuepress/plugin-search": "^2.0.0-beta.20",
     "glob": "^7.1.7",
+    "node-fetch": "^2.6.1",
     "parse-md": "^2.0.4",
+    "prismjs": ">=1.24.0",
     "typescript": "^4.3.5",
     "vuepress": "^2.0.0-beta.20",
-    "vuepress-vite": "^2.0.0-beta.20",
-    "prismjs": ">=1.24.0"
+    "vuepress-vite": "^2.0.0-beta.20"
   }
 }
