--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,5 @@
-appdirs==1.4.4
-black==21.6b0
-certifi==2021.5.30
-click==8.0.1
-colorama==0.4.4
-et-xmlfile==1.1.0
-markdown-strings==3.3.0
-mdutils==1.3.0
-mypy==0.902
-mypy-extensions==0.4.3
-numpy==1.21.0
-openpyxl==3.0.7
-pandas==1.2.4
-pathspec==0.8.1
-pathvalidate==2.4.1
-python-dateutil==2.8.1
-pytz==2021.1
-PyYAML==5.4.1
-regex==2021.4.4
-six==1.16.0
-toml==0.10.2
-types-PyYAML==5.4.3
-typing-extensions==3.10.0.0
-xlrd==2.0.1
+pandas
+PyYAML
+pathvalidate
+openpyxl
+mdutils
